tests/qd/errors/invalid_type_output.qd
fn test( x:i64 -- result:float64 ) {
    dup
}

fn main() {
    42 test printv
}
